--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles.css">
     
 </head>
-<body_head>
+<body-head>
     <div class="fraim2">
 
         <div class="elipse2"></div>
@@ -84,7 +84,7 @@
         </a>
         <span class="action_name">АКЦІЇ</span>
 
-</body_head>
+</body-head>
 
     <div class="iheader-text" id="instructions">Інструкції</div>
             <div class="instructions-text">
