--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="elipse2"></div>
 
         <div class="main_logo"></div>
-        <span class="main_logo_text">DISCOUNTS FROM ALI</span>
+        <span class="main_logo_text">LEXXEXPRESS.CLICK</span>
         <span class="slogan_text">🌶 з нами дешевше!</span>
 
         <span class="tgchnl_text">НАШІ ТЕЛЕГРАМ КАНАЛИ</span>
