--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<!DOCTYPE html> 
+<html lang="uk">
 <head>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TRWW9NBMFN"></script>
@@ -25,7 +25,7 @@
         <div class="elipse2"></div>
 
         <div class="main_logo"></div>
-        <span class="main_logo_text">LEXXEXPRESS.CLICK</span>
+        <span class="main_logo_text">DISCOUNTS FROM ALI</span>
         <span class="slogan_text">🌶 з нами дешевше!</span>
 
         <span class="tgchnl_text">НАШІ ТЕЛЕГРАМ КАНАЛИ</span>
@@ -86,6 +86,8 @@
 
 </body-head>
 
+    
+<body class="dark-theme">
     <div class="iheader-text" id="instructions">Інструкції</div>
             <div class="instructions-text">
                 <p><b>✅ COUPONS</b>
@@ -116,5 +118,5 @@
                 <p><br>シ Гарного настрою!</p>
             </div>
 
-
-
+</body>
+</html>
