--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 </body-head>
 
     
-<body class="dark-theme">
-    <div class="iheader-text" id="instructions">Інструкції</div>
+<body class="light-theme">
+    
             <div class="instructions-text">
                 <p><b>✅ COUPONS</b>
                     <br>👆Натисніть щоб отримати інформацію про актуальні промокоди та акції.<br><br></p>
