--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             window.addEventListener('scroll', function() {
               var catLogo = document.getElementById('catLogo');
               if (window.scrollY >= 125) {
-                catLogo.style.left = '5px';
+                catLogo.style.right = '5px';
                 catLogo.style.top = '2px'; // початкова позиція 22px + 350px
               } else {
-                catLogo.style.left = '214px';
+                catLogo.style.left = '14px';
                 catLogo.style.top = '22px'; // початкова позиція
               }
             });
