--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
           <script>
             window.addEventListener('scroll', function() {
               var catLogo = document.getElementById('catLogo');
-              if (window.scrollY >= 125) {
-                catLogo.style.right = '5px';
+              if (window.scrollY >= 15px) {
+                catLogo.style.right = '225px';
                 catLogo.style.top = '2px'; // початкова позиція 22px + 350px
               } else {
                 catLogo.style.left = '14px';
-                catLogo.style.top = '22px'; // початкова позиція
+                catLogo.style.top = '5px'; // початкова позиція
               }
             });
           </script>
