--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   
 <body class="light-theme">
+    <div class="main-container"> 
 
             <body-head>
 
@@ -97,6 +98,6 @@
                 
                 <p><br>シ Гарного настрою!</p>
             </div>
-
+   </div>
 </body>
 </html>
