--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
     
 
 </body-head>
-    <div class="iheader-text" id="instructions">Інструкції</div>
+            <div class="instruction-img">
+                <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/img/Spilnota.PNG" alt="COUPONS" class="btn-icon">
+            </div>
+        <div class="iheader-text" id="instructions">Інструкції</div>
             <div class="instructions-text">
                 <p><b>✅ COUPONS</b>
                     <br>👆Натисніть щоб отримати інформацію про актуальні промокоди та акції.<br><br></p>
