--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 </body-head>
             <div class="instruction-img">
-                <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/img/Spilnota.PNG" alt="COUPONS" class="btn-icon">
+                <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/Spilnota.PNG" alt="СПІЛЬНОТА ПОКУПЦІВ" class="btn-icon">
             </div>
         <div class="iheader-text" id="instructions">Інструкції</div>
             <div class="instructions-text">
