--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 catLogo.style.top = '62px'; // початкова позиція 22px + 350px
               } else {
                 catLogo.style.left = '4px';  // було 214px
-                catLogo.style.top = '22px'; // початкова позиція
+                catLogo.style.top = '42px'; // початкова позиція 22px
               }
             });
           </script>
