Fix body-head tag and structure in index_reserv.html

--- a/index_reserv.html
+++ b/index_reserv.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles.css">
     
 </head>
-<body-head>
+<div class="top-buttons">
     <div class="fraim2">
 
         <div class="elipse2"></div>
@@ -84,7 +84,7 @@
         </a>
         <span class="action_name">АКЦІЇ</span>
 
-</body-head>
+</div>
 
     
 <body class="dark-theme">
