--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="light-theme">
     <div class="main-container"> 
 
-            <body-head>
+            <div class="top-buttons">
 
         <div class="cat_img" id="catLogo"></div>
 
@@ -68,7 +68,7 @@
                 
     
 
-</body-head>
+</div>
             <div class="instruction-img">
                 <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/Spilnota.PNG" alt="СПІЛЬНОТА ПОКУПЦІВ" class="btn-icon">
             </div>
