Rename iheader-text to slogan-text in index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="instruction-img">
                 <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/Spilnota.PNG" alt="СПІЛЬНОТА ПОКУПЦІВ" class="btn-icon">
             </div>
-        <div class="iheader-text" id="instructions">シ Педро помічник - ділить ціни на три!</div>
+        <div class="slogan-text" id="instructions">シ Педро помічник - ділить ціни на три!</div>
             <div class="instructions-text">
                 <p><b>✅ COUPONS</b>
                     <br>👆Натисніть щоб отримати інформацію про актуальні промокоди та акції.<br><br></p>
