--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               var catLogo = document.getElementById('catLogo');
               if (window.scrollY >= 125) {
                 catLogo.style.left = '333px'; // було 333px
-                catLogo.style.top = '62px'; // початкова позиція 22px + 350px
+                catLogo.style.top = '162px'; // початкова позиція 62px
               } else {
                 catLogo.style.left = '4px';  // було 214px
                 catLogo.style.top = '42px'; // початкова позиція 22px
