Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 </div>
             <div class="instruction-img">
-                <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/Spilnota.PNG" alt="СПІЛЬНОТА ПОКУПЦІВ" class="btn-icon">
+            <img src="https://raw.githubusercontent.com/DiscountsFromAli/X-CUBOT/main/images/pedro.jpeg" class="instruction-img">
             </div>
         <div class="slogan-text" id="instructions">シ Педро помічник - ділить ціни на три!</div>
             <div class="instructions-text">
