Update coinsbot_name text in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="https://t.me/ali_coins_official_bot" target="_blank">
         <div class="COINS_BOT"></div>
         </a>
-        <span class="coinsbot_name">МОНЕТНИЙ БОТ</span>
+        <span class="coinsbot_name">ВСЕ ПРО МОНЕТИ</span>
 
         <a href="https://s.click.aliexpress.com/e/_Dm40l0X" target="_blank">
         <div class="supercoins"></div>
