Update HTML structure for coin bot links

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           </script>
 
         <a href="https://t.me/ali_coins_official_bot" target="_blank">
-        <div class="COINS_BOT"></div>
+        <div class="ALL_OF_COINS"></div>
         </a>
-        <span class="coinsbot_name">ВСЕ ПРО МОНЕТИ</span>
+        <span class="allofcoins_name">ВСЕ ПРО МОНЕТИ</span>
 
         <a href="https://s.click.aliexpress.com/e/_Dm40l0X" target="_blank">
         <div class="supercoins"></div>
