--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   
 <body class="light-theme">
     <div class="main-container"> 
-
+        
+<div class="top-buttons">
         <a href="https://t.me/ali_coins_official_bot" target="_blank">
         <div class="ALL_OF_COINS"></div>
         </a>
@@ -44,7 +45,7 @@
         </a>
         <span class="action_name">АКЦІЇ</span>
 
-
+</div
 
         <div class="cat_img" id="catLogo"></div>
 
