--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
   
 <body class="light-theme">
-    <div class="main-container"> 
-        
-<div class="top-buttons">
+
+    <div class="top-buttons">
         <a href="https://t.me/ali_coins_official_bot" target="_blank">
         <div class="ALL_OF_COINS"></div>
         </a>
@@ -45,7 +44,10 @@
         </a>
         <span class="action_name">АКЦІЇ</span>
 
-</div
+    </div>
+    <div class="main-container"> 
+        
+
 
         <div class="cat_img" id="catLogo"></div>
 
