--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="allofcoins_name">ВСЕ ПРО МОНЕТИ</span>
 
         <a href="https://s.click.aliexpress.com/e/_Dm40l0X" target="_blank">
-        <div class="supercoins"></div>
+        <div class="SUPERCOINS"></div>
         </a>
         <span class="supercoins_name">СУПЕР МОНЕТКИ</span>
 
