--- a/history.html
+++ b/history.html
@@ -1,1 +1,134 @@
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <title>Історія та цікаві факти про AliExpress — Педро помічник</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css"> <!-- якщо стилі в папці assets/css -->
+    <style>
+        body {
+            font-family: 'Montserrat', sans-serif;
+            line-height: 1.7;
+            margin: 0;
+            padding: 0;
+            background: #f8f9fa;
+            color: #333;
+        }
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 30px 20px;
+        }
+        .header {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+        .header img {
+            width: 100%;
+            max-width: 600px;
+            border-radius: 16px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+            margin-bottom: 20px;
+        }
+        h1 {
+            font-size: 2.2rem;
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+        h2 {
+            font-size: 1.6rem;
+            color: #3498db;
+            margin-top: 40px;
+            margin-bottom: 15px;
+        }
+        .fact {
+            background: white;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+            margin-bottom: 20px;
+            border-left: 5px solid #3498db;
+        }
+        .back-btn {
+            display: inline-block;
+            margin-top: 30px;
+            padding: 12px 28px;
+            background: #3498db;
+            color: white;
+            text-decoration: none;
+            border-radius: 10px;
+            font-weight: 500;
+            transition: background 0.3s;
+        }
+        .back-btn:hover {
+            background: #2980b9;
+        }
+        @media (max-width: 600px) {
+            h1 { font-size: 1.8rem; }
+            .header img { max-width: 100%; }
+        }
+    </style>
+</head>
+<body class="light-theme">
 
+    <div class="container">
+        <div class="header">
+            <img src="https://lh7-rt.googleusercontent.com/sitesz/AClOY7qGi8niK7VVks6zMOG-WlSdmTARu3DkpDTHdCVpatFb1LtWnO4dCskMCf_cXK1CHgsVQNsVzBeUQqO1LHXGMOcNjIvcDyC95cEXPQOhQCsJdfHGr9RgHoeH7HBSC5L5mcqEEysUotlpobTBMgz25WrLEZrQjvHddjs-2NYt6fAwCKEoj7ryyfEfJtcqLb6O?key=Ya1rYl9uui18sjzuWAuiPQ" alt="AliExpress історія">
+            <h1>Історія та цікаві факти про AliExpress</h1>
+            <p>Педро помічник ділиться найцікавішим про найбільшу платформу онлайн-шопінгу у світі</p>
+        </div>
+
+        <h2>Заснування та власники</h2>
+        <div class="fact">
+            <p><strong>AliExpress</strong> був заснований у 2010 році групою компаній <strong>Alibaba Group</strong> — однією з найбільших інтернет-компаній у світі.</p>
+            <p>Засновниками Alibaba є легендарний <strong>Джек Ма</strong> та його соратник <strong>Чжоу Цзюнь</strong>. Саме вони зробили китайську електронну комерцію світовим феноменом.</p>
+        </div>
+
+        <h2>Глобальний ринок</h2>
+        <div class="fact">
+            <p>AliExpress є однією з найбільших онлайн-торговельних платформ у світі та спеціалізується на продажу товарів з Китаю в інші країни.</p>
+            <p>Завдяки доступним цінам, величезному асортименту та швидкій доставці платформа стала улюбленою серед мільйонів покупців з України, Європи, США, Латинської Америки та інших регіонів.</p>
+        </div>
+
+        <h2>Різноманітність товарів</h2>
+        <div class="fact">
+            <p>На AliExpress ви знайдете практично все: від новітньої електроніки, брендового одягу та аксесуарів до товарів для дому, іграшок, косметики, ювелірних виробів та навіть незвичайних гаджетів.</p>
+            <p>Щодня додаються тисячі нових товарів від мільйонів продавців — це справжній океан можливостей для шопінгу.</p>
+        </div>
+
+        <h2>Знижки, промокоди та акції</h2>
+        <div class="fact">
+            <p>AliExpress постійно проводить грандіозні розпродажі: 11.11 (День холостяка), Чорна п'ятниця, 3.8, 6.18, 9.9 та багато інших.</p>
+            <p>Платформа пропонує величезну кількість купонів, промокодів, флеш-розпродажів та кешбеку — саме тому Педро помічник допомагає знаходити найкращі пропозиції щодня!</p>
+        </div>
+
+        <h2>Система відгуків та рейтингів</h2>
+        <div class="fact">
+            <p>AliExpress має одну з найпотужніших систем відгуків у світі — мільйони покупців щодня залишають фото, відео та детальні відгуки.</p>
+            <p>Це допомагає іншим швидко зрозуміти якість товару, надійність продавця та реальний розмір/колір. Завжди читайте відгуки з фото — це найкращий спосіб уникнути розчарувань.</p>
+        </div>
+
+        <p style="text-align: center; margin-top: 50px; font-size: 1.2rem; color: #555;">
+            Це лише кілька аспектів того, що робить AliExpress унікальним та цікавим для мільйонів покупців у всьому світі.<br>
+            <strong>Слідкуйте за оновленнями та ловіть найкращі ціни разом з Педро помічником!</strong> 😊
+        </p>
+
+        <div style="text-align: center; margin: 40px 0;">
+            <a href="index.html" class="back-btn" style="
+                display: inline-block;
+                padding: 14px 32px;
+                background: #3498db;
+                color: white;
+                text-decoration: none;
+                border-radius: 12px;
+                font-size: 1.1rem;
+                font-weight: 500;
+            ">← Повернутися на головну</a>
+        </div>
+    </div>
+
+</body>
+</html>
