--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="https://sites.google.com/view/discounts-from-ali/coupons" target="_blank">
         <div class="COUPONS"></div>
         </a>
-        <span class="coupons_name">КУПОНИ</span>
+        <span class="coupons_name">ІСТОРІЯ ТА ФАКТИ</span>
 
         
 
