--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </a>
         <span class="supercoins_name">СУПЕР МОНЕТКИ</span>
 
-        <a href="https://sites.google.com/view/discounts-from-ali/coupons" target="_blank">
-        <div class="COUPONS"></div>
+        <a href="https://discountsfromlexx.github.io/help/history.html" target="_blank">
+        <div class="HISTORY"></div>
         </a>
-        <span class="coupons_name">ІСТОРІЯ ТА ФАКТИ</span>
+        <span class="history_name">ІСТОРІЯ ТА ФАКТИ</span>
 
         
 
