--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         </a>
         <span class="supercoins_name">СУПЕР МОНЕТКИ</span>
 
-        <a href="https://discountsfromlexx.github.io/help/history.html" target="_blank">
-        <div class="HISTORY"></div>
-        </a>
-        <span class="history_name">ІСТОРІЯ ТА ФАКТИ</span>
+
+        <button type="button" class="history-btn">
+                    <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/history.png" alt="HOW TO" class="btn-icon">
+                    <span>ІСТОРІЯ ТА ФАКТИ</span>
+                </button>
 
         
 
