--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
         <button type="button" class="history-btn">
                     <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/history.png" alt="HOW TO" class="btn-icon">
-                    <span>ІСТОРІЯ ТА ФАКТИ</span>
+                    <span class="history_name">ІСТОРІЯ ТА ФАКТИ</span>
+           
         </button>
 
         
