--- a/history.html
+++ b/history.html
@@ -57,7 +57,7 @@
               }
             });
           </script>
-    <div class="main-container"> 
+    <div class="history-container"> 
         
 
 
