--- a/history.html
+++ b/history.html
@@ -16,7 +16,7 @@
   
 <body class="light-theme">
 
-    <div class="top-buttons">
+    <div class="history-buttons">
         <a href="https://t.me/ali_coins_official_bot" target="_blank">
         <div class="ALL_OF_COINS"></div>
         </a>
