--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     
 </head>
-
+<body>
   
-<body class="light-theme">
+<div class="light-theme">
 
     <div class="top-buttons">
         <a href="https://t.me/ali_coins_official_bot" target="_blank">
@@ -102,5 +102,6 @@
                 <p><br>シ Гарного настрою!</p>
             </div>
    </div>
+</div>
 </body>
 </html>
