--- a/history.html
+++ b/history.html
@@ -13,8 +13,8 @@
     
 </head>
 
-  
-<body class="light-theme">
+<body>
+<div class="light-theme">
 
     <div class="history-buttons">
         <a href="https://t.me/ali_coins_official_bot" target="_blank">
@@ -125,6 +125,7 @@
             ">← Повернутися на головну</a>
         </div>
 
-   </div>
+       </div>
+    </div>
 </body>
 </html>
