--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             });
           </script>
             
-            <div class="top-buttons">
-                <button type="button" class="coupons-btn">
-                    <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/coupon.png" alt="COUPONS" class="btn-icon">
-                    <span>COUPONS</span>
+            <div class="history-buttons">
+                <button type="button" class="history-btn">
+                    <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/history.png" alt="history-btn" class="btn-icon">
+                    <span>ІСТОРІЯ ТА ФАКТИ</span>
                 </button>
             
                     <a href="https://t.me/ali_coins_official_bot" target="_blank">
