--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </div>
             <div class="top-buttons">
                 <button type="button" class="coupons-btn">
-                    <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/coupon.png" alt="COUPONS" class="btn-icon">
-                    <span>COUPONS</span>
+                    <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/history.png" alt="COUPONS" class="btn-icon">
+                    <span>ІСТОРІЯ ТА ФАКТИ</span>
                 </button>
             
                 <button type="button" class="instruction-btn">
