--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="slogan-text">                        
                         <p>シ Педро помічник - ділить ціни на три!</p>
             </div>
-            <div class="buttons">
+            <div class="top-buttons">
                 <button type="button" class="history-btn">
                     <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/history.png" alt="COUPONS" class="btn-icon">
                     <span>ІСТОРІЯ ТА ФАКТИ</span>
