--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <p>シ Педро помічник - ділить ціни на три!</p>
             </div>
             <div class="top-buttons">
-                <button type="button" class="coupons-btn">
-                    <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/coupon.png" alt="COUPONS" class="btn-icon">
+                <button type="button" class="history-btn">
+                    <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/history.png" alt="COUPONS" class="btn-icon">
                     <span>COUPONS</span>
                 </button>
             
