--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="top-buttons">
                 <button type="button" class="history-btn">
                     <img src="https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/history.png" alt="COUPONS" class="btn-icon">
-                    <span>COUPONS</span>
+                    <span>ІСТОРІЯ ТА ФАКТИ</span>
                 </button>
             
                 <button type="button" class="instruction-btn">
