--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
     
 </head>
 <body class="light-theme">
-    <div class="main-container">        
+    <div class="main-container">     
+
+        <script>
+            window.addEventListener('scroll', function() {
+              var catLogo = document.getElementById('catLogo');
+              if (window.scrollY >= 125) {
+                catLogo.style.left = '333px'; // було 333px
+                catLogo.style.top = '162px'; // початкова позиція 62px
+              } else {
+                catLogo.style.left = '4px'; // було 214px
+                catLogo.style.top = '68px'; // початкова позиція 42px
+              }
+            });
+          </script>
 
         <div class="container">      
                        
